--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,29 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Sonarqube code starts from here -->
 	</dependencies>
+	<!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
+	<dependency>
+          <groupId>org.sonarsource.scanner.maven</groupId>
+ 	  <artifactId>sonar-maven-plugin</artifactId>
+	  <version>3.2</version>
+        </dependency>
+	<profiles>
+	 <profile>
+	  <id>sonar</id>
+	     <activation>
+	     <activeByDefault>true</activeByDefault>
+	     </activation>
+	  <properties>
+		<!-- Optional URL to server. Default value is http://localhost:9000 -->
+		<sonar.host.url>
+		http://192.168.2.174:9000
+		</sonar.host.url>
+	  </properties>
+	 </profile>
+	</profiles>
+	<!-- Sonarqube code ends  here -->
 	
 	<distributionManagement>
 		 <snapshotRepository>
